@@ -1,3 +1,7 @@
+2007-02-12  Alan Modra  <amodra@bigpond.net.au>
+
+	* elflink.c (bfd_elf_discard_info): Tidy setting of "eh".
+
 2007-02-05  Dave Brolley  <brolley@redhat.com>
             Stan Cox  <scox@redhat.com>
 
